<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rules"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diamo.iturn.RulesActivity">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="450dp"
        android:text="@string/backToGame" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:textColor="@color/colorCoral"
        android:textSize="24sp"
        android:text="@string/rules"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <DatePicker
        android:id="@+id/calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:endYear="2100"
        android:startYear="1900"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
    </DatePicker>

    <Button
        android:id="@+id/buttonShowCalender"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/showCalender"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/backToRules"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/backToRules"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="@string/caution"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorDarkSunset"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>