<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.diamo.iturn.ShopActivity">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/backToGame"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/successText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/buyBtn"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:text="@string/Buy"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tick1"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintBottom_toTopOf="@+id/blueRadioButton"
        app:layout_constraintTop_toBottomOf="@+id/scoreInShop"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/successText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BuySmth"
        android:textSize="40sp"
        android:textColor="@color/colorBlueOrchid"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="69dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonBack"
        android:layout_marginLeft="33dp" />

    <ImageView
        android:id="@+id/greenBall"
        android:layout_width="122dp"
        android:layout_height="75dp"
        app:srcCompat="@mipmap/greenball"
        app:layout_constraintBottom_toTopOf="@+id/roseBall"
        app:layout_constraintTop_toBottomOf="@+id/blueBall"
        app:layout_constraintRight_toLeftOf="@+id/tick3"
        app:layout_constraintLeft_toLeftOf="parent" />
    <ImageView
        android:id="@+id/roseBall"
        android:layout_width="122dp"
        android:layout_height="68dp"
        app:srcCompat="@mipmap/roseball"
        app:layout_constraintBottom_toTopOf="@+id/successText"
        app:layout_constraintTop_toBottomOf="@+id/greenBall"
        app:layout_constraintRight_toLeftOf="@+id/tick4"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/scoreInShop"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:textColor="@color/colorLime"
        android:textAlignment="center"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/defaultBall"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <RadioButton
        android:id="@+id/blueRadioButton"
        android:layout_width="101dp"
        android:layout_height="33dp"
        android:text="@string/price1"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/buyBtn"
        app:layout_constraintLeft_toRightOf="@+id/tick2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintBottom_toTopOf="@+id/greenRadioButton" />

    <RadioButton
        android:id="@+id/greenRadioButton"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:text="@string/price2"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/blueRadioButton"
        app:layout_constraintBottom_toTopOf="@+id/roseRadioButton"
        app:layout_constraintLeft_toRightOf="@+id/tick3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.278" />

    <ImageView
        android:id="@+id/blueBall"
        android:layout_width="123dp"
        android:layout_height="71dp"
        app:srcCompat="@mipmap/blueball"
        app:layout_constraintBottom_toTopOf="@+id/greenBall"
        app:layout_constraintTop_toBottomOf="@+id/defaultBall"
        app:layout_constraintRight_toLeftOf="@+id/tick2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioButton
        android:id="@+id/roseRadioButton"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:onClick="onRadioButtonClicked"
        android:text="@string/price3"
        app:layout_constraintTop_toTopOf="@+id/roseBall"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/roseBall"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tick4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.24" />

    <ImageView
        android:id="@+id/defaultBall"
        android:layout_width="120dp"
        android:layout_height="74dp"
        app:srcCompat="@mipmap/ball"
        app:layout_constraintLeft_toLeftOf="@+id/blueBall"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/blueBall"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/blueBall"
        app:layout_constraintTop_toBottomOf="@+id/scoreInShop" />

    <ImageView
        android:id="@+id/tick1"
        android:layout_width="73dp"
        android:layout_height="73dp"
        app:srcCompat="@mipmap/tick"
        app:layout_constraintLeft_toRightOf="@+id/defaultBall"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tick2"
        app:layout_constraintTop_toBottomOf="@+id/scoreInShop" />

    <ImageView
        android:id="@+id/tick2"
        android:layout_width="69dp"
        android:layout_height="72dp"
        app:srcCompat="@mipmap/tick"
        app:layout_constraintLeft_toRightOf="@+id/blueBall"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tick3"
        app:layout_constraintTop_toBottomOf="@+id/tick1" />

    <ImageView
        android:id="@+id/tick4"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@mipmap/tick"
        app:layout_constraintLeft_toRightOf="@+id/roseBall"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/successText"
        app:layout_constraintTop_toBottomOf="@+id/tick3" />

    <ImageView
        android:id="@+id/tick3"
        android:layout_width="68dp"
        android:layout_height="71dp"
        app:srcCompat="@mipmap/tick"
        app:layout_constraintLeft_toRightOf="@+id/greenBall"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tick2"
        app:layout_constraintBottom_toTopOf="@+id/tick4"
        tools:layout_editor_absoluteY="234dp" />

</android.support.constraint.ConstraintLayout>